[tool.poetry]
name = "chatbot_with_yuka"
version = "0.1.0"
description = ""
authors = ["Craig Nishina <craig.nishina@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
twitchio = "^2.4.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
